@@ -178,6 +178,15 @@ class IShopConfiguration(Interface):
             required=False,
             default=u"")
 
+    phone_number = schema.TextLine(
+        title=_(u'label_phone_number',
+                default=u'Phone number'),
+        description=_(u'help_phone_number',
+                      default=u'Will be displayed in the customer confirmation mail'
+                      ' as contact information when configured.'),
+        required=False,
+        default=u'')
+
     always_notify_shop_owner = schema.Bool(
             title=_(u"label_always_notify_shop_owner",
                     default=u"Always notify shop owner about orders"),
