@@ -1,8 +1,12 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:gs="http://namespaces.zope.org/genericsetup"
+    xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
     i18n_domain="ftw.shop">
 
+    <include package="ftw.upgrade" file="meta.zcml" />
+
+    <!-- 1 -> 1100 -->
     <gs:registerProfile
         name="1.0-1.1"
         title="Upgrade profile for ftw.shop 1.0 to 1.1"
@@ -19,6 +23,15 @@
         destination="1100"
         handler="ftw.shop.upgrades.to_v11"
         profile="ftw.shop:default"
+        />
+
+    <!-- 1100 -> 1300 -->
+    <upgrade-step:importProfile
+        title="Add registry setting 'phone_number'"
+        profile="ftw.shop:default"
+        source="1100"
+        destination="1300"
+        directory="profiles/1300"
         />
 
 </configure>
