@@ -50,6 +50,7 @@ setup(name='ftw.shop',
         'collective.z3cform.wizard',
         'plone.app.registry',
         'simplejson',
+        'ftw.upgrade',
         'collective.js.jqueryui',
 #        'Products.ATCountryWidget',
       ],
